--- a/style.css
+++ b/style.css
@@ -1,25 +1,74 @@
+html {
+  scroll-behavior: smooth;
+}
+main {
+  background-color: yellowgreen;
+}
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+p {
+  font-size: 1.9rem;
+}
 .main-nav {
   display: flex;
+  justify-content: center;
   flex-direction: row;
   background-color: #5f9ea0;
   color: chocolate;
   transition: all 0.4s ease-in-out;
 }
+
 .main-nav a {
   color: aliceblue;
   text-decoration: dashed;
-  margin: 1em;
+  margin: 6;
   font-size: 5em;
+  padding-top: 6mm;
+  padding-bottom: 10mm;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.main-nav div {
-  font-size: large;
+.main-nav a {
+  font-size: 18px;
   color: azure;
 }
-.main-nav div:hover {
-  transform: scale(1.3);
+.active a:hover {
+  background-color: yellow;
 }
+a:hover {
+  transform: scale(1.2);
+  background-color: #315152;
+}
+
 .active {
   display: flex;
   background: yellow;
   color: darkred;
+}
+
+footer {
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: black;
+  color: antiquewhite;
+}
+.container {
+  display: grid;
+}
+.item {
+  font-size: 4rem;
+
+  grid-column-start: 1;
+  grid-column-end: auto;
+  grid-row-start: 1;
+  grid-row-end: auto;
+}
+.image {
+  display: flex;
+}
+.quickLinks {
+  background-color: #315152;
+  color: antiquewhite;
 }
