--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
+/*Gör responsiv, anpassa för telefon*/
+/**/
+
 html {
   scroll-behavior: smooth;
 }
 main {
   background-color: yellowgreen;
 }
+.tillLQG {
+  size: inherit;
+}
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 p {
-  font-size: 1.9rem;
+  font-size: 2.2rem;
+}
+h3 {
+  font-size: 3.4rem;
+  font-weight: 560;
+}
+.top {
+  display: flex;
+  flex-direction: row;
+}
+.nyheter {
+  display: flex;
+  /*nyaste först*/
+  flex-direction: row-reverse;
 }
 .main-nav {
   display: flex;
@@ -60,8 +79,8 @@ footer {
   display: grid;
 }
 .rectangle {
-  height: 170px;
-  width: 20rem;
+  /*height: 15rem;
+  width: 20rem;*/
   background-color: yellow;
 }
 .item {
@@ -117,4 +136,9 @@ footer {
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
+}
+.dlBackground {
+  color: aliceblue;
+  background-image: url(./Bilder/intro-1525214782.jpg);
+  background-repeat: repeat;
 }
