--- a/style.css
+++ b/style.css
@@ -1,94 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap");
 /*Gör responsiv, anpassa för telefon*/
-@media screen and (max-width: 866px) {
-  .main-nav {
-    height: 40rem;
-    margin: -4rem;
-    padding-top: 4rem;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    background-color: #333333;
-  }
-
-  .main-nav a {
-    text-decoration: dashed;
-    margin: 6;
-    font-size: 1.6rem;
-    padding-top: 6mm;
-    padding-bottom: 6mm;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    color: azure;
-  }
-  .main-nav a:hover {
-    background-color: #edfeff;
-    color: black;
-  }
-  a {
-    color: rgb(63, 91, 148);
-    min-width: 10%;
-    min-height: 10%;
-  }
-  .active {
-    /*wtf händer här*/
-    text-align: center;
-    width: 20rem;
-    background: rgb(0, 213, 255);
-    color: #333333;
-  }
-  .inActive {
-    width: 25rem;
-    padding: 0.2rem;
-    text-align: center;
-  }
-
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
-  }
-  .top {
-    visibility: hidden;
-  }
-  .phoneTop {
-    visibility: visible;
-  }
-
-  p {
-    margin: 2rem;
-    font-size: 4.2rem;
-  }
-
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #myLinks {
-    display: none;
-  }
-
-  /* Style navigation menu links */
-  .topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  }
-
-  /* Style the hamburger menu */
-  .topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-}
 
 h3 {
   margin: 1.5rem;
@@ -97,6 +8,7 @@ h3 {
   min-width: 10%;
   min-height: 10%;
 }
+
 .nyheter {
   padding: 1.2rem;
 
@@ -160,14 +72,6 @@ h5 {
 .top {
   display: flex;
   flex-direction: row;
-}
-.nyheter {
-  /*få det här att gömma sig bakom en knapp när skärmen är för liten*/
-  width: 70%;
-  display: flex;
-
-  /*nyaste först*/
-  flex-direction: row-reverse;
 }
 .logo {
   display: flex;
@@ -307,4 +211,149 @@ button {
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
+}
+
+@media screen and (max-width: 870px) {
+  .p {
+    text-align: left;
+  }
+  .lqgFont {
+    margin-left: 25%;
+    width: 75%;
+    margin-right: 25%;
+    justify-content: left;
+    font-family: "Kanit";
+    color: white;
+    font-size: 2rem;
+    float: left;
+  }
+  .tillLQG {
+    float: center;
+    height: 6.5rem;
+    padding-bottom: 3.6rem;
+  }
+  .main-nav {
+    height: auto;
+    margin: -1rem;
+    padding-top: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #333333;
+  }
+
+  .main-nav a {
+    text-decoration: dashed;
+    margin: 6;
+    font-size: 1.6rem;
+    padding-top: 6mm;
+    padding-bottom: 6mm;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color: azure;
+  }
+  .main-nav a:hover {
+    background-color: #edfeff;
+    color: black;
+  }
+  a {
+    color: rgb(63, 91, 148);
+    min-width: 10%;
+    min-height: 10%;
+  }
+  ul {
+    margin: 2rem;
+  }
+  .active {
+    /*wtf händer här*/
+    text-align: center;
+    width: 80%;
+    background: rgb(0, 213, 255);
+    color: #333333;
+  }
+  .f {
+    font-size: 1.8rem;
+  }
+  .inActive {
+    width: 80%;
+    width: 25rem;
+    padding: 0.2rem;
+    text-align: center;
+  }
+  .image {
+    width: 100%;
+  }
+
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  .top {
+    display: flex;
+    flex-direction: column;
+  }
+  p {
+    margin: 2rem;
+    font-size: 4.2rem;
+  }
+
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
+
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  a {
+    font-size: 2rem;
+  }
+
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  .rectangle {
+    width: 100%;
+    /*height: 15rem;
+  */
+
+    background-color: rgb(64, 59, 59);
+    color: antiquewhite;
+  }
+  .nyheter {
+    padding: 1.2rem;
+
+    /*få det här att gömma sig bakom en knapp när skärmen är för liten*/
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    /*nyaste först*/
+    flex-direction: column;
+    background-color: #333333;
+  }
+  .artikel {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 }
